# assertion-executor

./: .gitignore  .gitmodules  CODEOWNERS  Cargo.toml  Dockerfile  Makefile  README.md  copy-contract-code.sh  flake.nix
.circleci/: config.yml
.github/: CODEOWNERS
.github/workflows/: push.yml  release.yml  rust.yml
benches/: worst-case-op.rs
contract-mocks/: remappings.txt
contract-mocks/src/: AssertionRegistration.sol  DemoLending.sol  ForkTest.sol  GetLogsTest.sol  SelectorImpl.sol  SimpleCounterAssertion.sol  StorageGas.sol  TestGetStorage.sol
contract-mocks/src/precompiles/: Target.sol  TestFork.sol  TestGetCallInputs.sol  TestGetLogs.sol  TestGetStateChanges.sol  TestLoad.sol
contract-mocks/src/triggers/: CallTrigger.sol
fuzz/: Cargo.toml
fuzz/fuzz_targets/: calls_fuzz.rs  load_external_slot_fuzz.rs  logs_fuzz.rs
src/: build_evm.rs  config.rs  error.rs  lib.rs  main.rs  primitives.rs  test_utils.rs  tracer.rs
src/db/: fork_db.rs  in_mem_db.rs  memory_db.rs  memory_db_v1.rs  mod.rs  multi_fork_db.rs  shared_db.rs  shared_db_v1.rs
src/db/fs/: error.rs  fs_db.rs  mod.rs
src/db/fs/serde/: account.rs  account_info.rs  block_changes.rs  bytecode.rs  evm_storage.rs  mod.rs  storage_slot_key.rs  value_history.rs
src/db/overlay/: active_overlay.rs  mod.rs  test_utils.rs
src/executor/: builder.rs  config.rs  mod.rs
src/inspectors/: mod.rs  phevm.rs  sol_primitives.rs  tracer.rs  trigger_recorder.rs
src/inspectors/precompiles/: assertion_adopter.rs  calls.rs  fork.rs  load.rs  logs.rs  mod.rs  state_changes.rs
src/store/: assertion_contract_extractor.rs  assertion_store.rs  da_client.rs  handler.rs  indexer.rs  map.rs  mod.rs  reader.rs  request.rs  writer.rs
src/store/stores/: mock_store.rs  mod.rs  rpc_store.rs
src/utils/: mod.rs  reorg_utils.rs
tests/common/: test_ctx.rs
