[package]
name = "assertion-executor"
version = "0.1.0"
edition = "2021"

[dependencies]
rayon = "1.10.0"
serde = { version = "1.0.208", features = ["derive"] }
sled = { version = "1.0.0-alpha.124" }
thiserror = "1.0.63"
tokio = { version = "1.39.2", features = ["macros", "rt-multi-thread", "sync"] }
tracing = "0.1.40"
zerocopy = { version = "0.8.3", features = ["derive"] }
tempfile = "3.13.0"

# ETH deps
alloy = "0.8.3"
alloy-provider = { version = "0.8.3", features = ["ws", "anvil-node"] }
alloy-sol-types = "0.8.3"
alloy-consensus = { version = "0.8.3", features = ["k256"] }
alloy-rpc-types = "0.8.3"
alloy-rpc-types-anvil = "0.8.3"
alloy-pubsub = "0.8.3"
alloy-rpc-client = "0.8.3"
alloy-node-bindings = "0.8.3"
alloy-network = "0.8.3"
alloy-signer = "0.8.3"
alloy-signer-local = "0.8.3"
alloy-transport = "0.8.3"
alloy-transport-ws = "0.8.3"
revm_18 = { version = "18.0.0", package = "revm", optional = true }
revm_17 = { version = "17.0.0", package = "revm", optional = true }
reth-primitives = { git = "https://github.com/paradigmxyz/reth.git", tag = "v1.1.1"}

# For Signed Authorization versioning conflict 
alloy-eip7702 = "0.4.2"

# ETL deps
mending = { git = "ssh://git@github.com/phylaxsystems/mending.git", rev = "3a771745f"}
anyhow = "1.0.89"
reth-db-api = { git = "https://github.com/paradigmxyz/reth.git", tag = "v1.1.1"}
reth-db = { git = "https://github.com/paradigmxyz/reth.git", tag = "v1.1.1"}
reth-primitives-traits = { git = "https://github.com/paradigmxyz/reth.git", tag = "v1.1.1"}
bincode = "1.3.3"
clap = "4.5.20"
clap_derive = "4.5.18"

# Test deps
serde_json = { optional = true, version = "1.0.133" }
rand = { version = "0.8.5", optional = true }
jsonrpsee = { version = "0.24.7", features = ["client", "http-client", "server"] }
tokio-util = "0.7.13"

# Maxperf profile for absolute maximum performance
# Only use for builds that are going to get used by end users
[profile.maxperf]
inherits = "release"
lto = "fat"
codegen-units = 1
incremental = false

[features]
default = ["revm_17"]
test = ["serde_json", "rand", "revm_17"]
phoundry = ["revm_18"]

[dev-dependencies]
rand = "0.8.5"
serde_json = "1.0.133"
tempfile = "3.13.0"

[[bin]]
name = "demo"
required-features = ["test"]
