[package]
name = "assertion-executor"
version = "0.1.0"
edition = "2021"

[dependencies]
rayon = "1.10.0"
serde = { version = "1.0.208", features = ["derive"] }
sled = { version = "1.0.0-alpha.124" }
thiserror = "1.0.63"
tokio = { version = "1.39.2", features = ["macros", "rt-multi-thread", "sync"] }
tracing = "0.1.40"
zerocopy = { version = "0.8.3", features = ["derive"] }
tempfile = "3.13.0"
parking_lot = "0.12.1"
#assertion-da-client = { git = "ssh://git@github.com/phylaxsystems/assertion-da.git", rev = "429200f" }
assertion-da-client = { git = "ssh://git@github.com/phylaxsystems/assertion-da.git", branch = "gregory/eng-591" }
bincode = "1.3.3"
anyhow = "1.0.89"
clap = { version = "4.4.3", features = ["derive"] }

# ETH deps
alloy = "0.11.1"
alloy-provider = { version = "0.11.1", features = ["ws", "anvil-node"] }
alloy-sol-types = "0.8.3"
alloy-consensus = { version = "0.11.1", features = ["k256"] }
alloy-rpc-types = "0.11.1"
alloy-rpc-types-anvil = "0.11.1"
alloy-pubsub = "0.11.1"
alloy-rpc-client = "0.11.1"
alloy-node-bindings = "0.11.1"
alloy-network = "0.11.1"
alloy-network-primitives = "0.11.1"
alloy-primitives = { version = "0.8.22", features = ["getrandom"] }
alloy-signer = "0.11.1"
alloy-signer-local = "0.11.1"
alloy-transport = "0.11.1"
alloy-transport-ws = "0.11.1"
revm = { version = "19.4.0", features = ["serde"]}
reth-primitives = { git = "https://github.com/paradigmxyz/reth.git", tag = "v1.2.1"}

# Test deps
serde_json = { optional = true, version = "1.0.133" }
rand = { version = "0.9.0", optional = true }
jsonrpsee = { version = "0.24.7", features = ["client", "http-client", "server"] }
tokio-util = "0.7.13"
evm-glue = { git = "https://git@github.com/Philogy/evm-glue.git", version = "0.1.0" }
moka = { version = "0.12.10", features = ["sync"] }
enum-as-inner = "0.6.1"

# Maxperf profile for absolute maximum performance
# Only use for builds that are going to get used by end users
[profile.maxperf]
inherits = "release"
lto = "fat"
codegen-units = 1
incremental = false

[features]
default = ["optimism"]
optimism = ["revm/optimism", "revm/optimism-default-handler"]
test = ["serde_json", "rand"]

[dev-dependencies]
rand = "0.9.0"
serde_json = "1.0.133"
tempfile = "3.13.0"
alloy-eip7702 = "0.5.1"
#assertion-da-server = { git = "ssh://git@github.com/phylaxsystems/assertion-da.git", rev = "429200f" }
assertion-da-server = { git = "ssh://git@github.com/phylaxsystems/assertion-da.git", branch = "gregory/eng-591" }
criterion = { version = "0.5.1" }
bollard = "0.18"

[[bin]]
name = "demo"
required-features = ["test"]

[[bench]]
name = "worst-case-op"
required-features = ["test"]
harness = false
